@@ -3,17 +3,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>eu.clarussecure</groupId>
   <artifactId>proxy</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>CLARUS proxy</name>
   <modules>
     <module>common</module>
-    <module>main</module>
     <module>modules/anonymization</module>
+    <module>modules/encryption</module>
     <module>modules/splitting</module>
     <module>plugins/http</module>
     <module>plugins/pgsql</module>
     <module>plugins/tcp</module>
+    <module>main</module>
   </modules>
   <organization>
     <name>The CLARUS Consortium</name>
@@ -31,10 +32,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <team.name>CLARUS Team</team.name>
-    <maven.test.skip>true</maven.test.skip>
+    <skip.surefire.tests>true</skip.surefire.tests>
+    <skip.failsafe.tests>true</skip.failsafe.tests>
     <doc.generation.skip>true</doc.generation.skip>
     <install.dir>${basedir}/install</install.dir>
     <plugin.compiler.version>3.5.1</plugin.compiler.version>
+    <plugin.surefire.version>2.12.4</plugin.surefire.version>
     <plugin.failsafe.version>2.19.1</plugin.failsafe.version>
     <plugin.dependency.version>2.10</plugin.dependency.version>
     <plugin.resources.version>3.0.1</plugin.resources.version>
@@ -112,6 +115,14 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${plugin.surefire.version}</version>
+          <configuration>
+            <skipTests>${skip.surefire.tests}</skipTests>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${plugin.failsafe.version}</version>
           <executions>
@@ -128,6 +139,12 @@
               </goals>
             </execution>
           </executions>
+          <configuration>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
+            <argLine>-Djava.ext.dirs="${java.ext.dirs}";${project.parent.relativePath}/install/ext-libs</argLine>
+            <skipITs>${skip.failsafe.tests}</skipITs>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
